--- a/cie.html
+++ b/cie.html
@@ -6,6 +6,7 @@
     <title>student registration</title>
 </head>
 <body>
+    <h1>student registration form</h1>
     <label for="student name">name</label>
     <input type="text">
     <br>
